examples/test/testpolicy7959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7959
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key39: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value2
      podSelector:
        matchLabels:
          key14: value41
          key33: value19
          key5: value10
